refactored to return Service Unavailable when giphy is not reachable